Added angularJS functionality for front-end

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="meanhotel">
 <head>
 	<title>MEAN Hotel</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
-	<h1>MEAN hotel homepage</h1>
-
+	<div ng-view></div>
+	<br/><br/><br/>
 	<footer class="footer">
 		<div class="container">
 			<p class="text-muted text-center">
@@ -22,6 +23,12 @@
 	</footer>
 
 	<script src="jquery/jquery-3.2.0.min.js"></script>
-
+	<script src="node_modules/angular/angular.js"></script>
+	<script src="node_modules/angular-route/angular-route.js"></script>
+	<script src="angular-app/app.js"></script>
+	<script src="angular-app/hotel-list/hotel-list-controller.js"></script>
+	<script src="angular-app/hotel-display/hotel-display-controller.js"></script>
+	<script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
+	<script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
 </body>
 </html>
