--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
 	<link href="css/custom.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image: url('images/black_wood.jpg')">
+	
 	<div ng-view></div>
-	<br/><br/><br/>
+
 	<footer class="footer">
 		<div class="container">
 			<p class="text-muted text-center">
-				<a href="http://khobares.myweb.cs.uwindsor.ca/" target="_blank"><img src="/images/Sid.png" height="26" alt="Full Stack"/></a>
+				<a href="http://khobares.myweb.cs.uwindsor.ca/" target="_blank"><img src="/images/Sid.png" height="26" alt="Full Stack Developer"/>
 			</p>
 
 			<p class="text-muted text-center">
 				<small>&copy; 2017 Sidd - Full Stack</small>
-			</p>
+			</p></a>
 		</div>
 	</footer>
 
@@ -30,5 +31,6 @@
 	<script src="angular-app/hotel-display/hotel-display-controller.js"></script>
 	<script src="angular-app/hotel-data-factory/hotel-data-factory.js"></script>
 	<script src="angular-app/hotel-rating/hotel-rating-directive.js"></script>
+
 </body>
 </html>
